# gestion-stock_back

./: .env  .gitignore  database.py  docker-compose.yml  estock.service  main.py  modele_bdd.py  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 20240512010325_initial_setup.py
api/: categories.py  products.py  stocks.py  users.py
api/v1/tasks/: tasks.py
api/v1/users/: users.py
core/: config.py  server.py
core/cache/: redis_backend.py
core/database/: session.py
migrations/: env.py
models/: __init__.py  category.py  product.py  stock.py  user.py
pgdata/: postmaster.pid
pgdata/base/13756/: pg_internal.init
pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
pgdata/pg_stat_tmp/: db_0.stat  db_13756.stat  global.stat
postgresql-test/: postmaster 2.pid  postmaster.pid
postgresql-test/base/13756/: pg_internal.init
postgresql-test/global/: 1260  1262  2671  pg_control  pg_internal.init
postgresql-test/pg_stat_tmp/: db_0.stat  db_13756.stat  global.stat
src/e_stock/: app.py
src/e_stock/api/v1/routers/: __init__.py  auth.py  categories.py  products.py  stocks.py  users.py
src/e_stock/core/: config.py  database.py  security.py
src/e_stock/exceptions/: __init__.py  base.py  categories.py  products.py  stocks.py
src/e_stock/helpers/: decorators.py
src/e_stock/models/: __init__.py  associations.py  categories.py  products.py  stocks.py  users.py
src/e_stock/repositories/: categories.py  products.py  stocks.py  users.py
src/e_stock/schemas/: __init__.py  categories.py  products.py  stocks.py  users.py
