[project]
name = "e-stock"
description = "Stock Management API using FastAPI"
dynamic = ["version"]
authors = [
    {name="Florian ISAK"}
]
requires-python = ">= 3.11"
dependencies = [
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "bcrypt>=4.1.3",
    "celery>=5.4.0",
    "cryptography>=42.0.7",
    "email-validator>=2.1.1",
    "fastapi-event>=0.1.3",
    "fastapi>=0.111.0",
    "greenlet>=3.0.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.2.1",
    "pydantic>=2.7.1",
    "pyjwt>=2.8.0",
    "python-jose>=3.3.0",
    "pyyaml>=6.0.1",
    "redis>=5.0.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "sqlalchemy-utils>=0.41.2",
    "typing-extensions>=4.11.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "bandit",
    "pytest-asyncio",
    "faker",
    "isort",
]

[build-system]
requires = ["setuptools>=69.5.1", "setuptools_scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]