[project]
name = "e-stock"
description = "Stock Management API using FastAPI"
dynamic = ["version"]
authors = [
    {name="Florian ISAK"}
]
requires-python = ">= 3.11"
dependencies = [
    "bcrypt>=4.1.3",
    "celery>=5.4.0",
    "cryptography>=42.0.7",
    "fastapi-event>=0.1.3",
    "fastapi>=0.111.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.2.1",
    "pydantic>=2.7.1",
    "pyyaml>=6.0.1",
    "redis>=5.0.4",
    "sqlmodel>=0.0.19",
    "typing-extensions>=4.11.0",
    "uvicorn>=0.29.0",
    "psycopg2>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "bandit",
    "pytest-asyncio",
    "faker",
    "isort",
]

[build-system]
requires = ["setuptools>=69.5.1", "setuptools_scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]